Move licenses into own file

--- a/dependency_decisions.yml
+++ b/dependency_decisions.yml
@@ -1,163 +1,3 @@
 ---
-- - :permit
-  - MIT
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:55:43.063080000 Z
-- - :permit
-  - ISC
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:55:47.144387000 Z
-- - :permit
-  - Apache 2.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:59:03.169366000 Z
-- - :permit
-  - New BSD
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:59:15.008433000 Z
-- - :permit
-  - Simplified BSD
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:59:20.885090000 Z
-- - :permit
-  - BSD-3-Clause
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:59:36.929491000 Z
-- - :permit
-  - GPL-2.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 10:59:45.253788000 Z
-- - :permit
-  - BSD
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:03:10.533446000 Z
-- - :permit
-  - Mozilla Public License 2.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:03:29.458686000 Z
-- - :permit
-  - CC-BY-4.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:03:39.242753000 Z
-- - :permit
-  - Apache-2.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:03:52.822561000 Z
-- - :permit
-  - WTFPL
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:04:23.509391000 Z
-- - :permit
-  - BSD Zero Clause License
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:04:35.042000000 Z
-- - :permit
-  - CC-BY-3.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:04:39.052746000 Z
-- - :permit
-  - ODC-By-1.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:05:11.655495000 Z
-- - :permit
-  - Public Domain
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:05:24.008451000 Z
-- - :permit
-  - CC0-1.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:05:33.651674000 Z
-- - :permit
-  - Zlib
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:05:50.113778000 Z
-- - :permit
-  - Python-2.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 11:09:19.949263000 Z
-- - :permit
-  - BMI-DXB
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 14:17:04.965229000 Z
-- - :permit
-  - MIT*
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 14:47:57.218196000 Z
-- - :permit
-  - BSD*
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 14:54:49.782489000 Z
-- - :permit
-  - Unlicense
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-02-18 15:05:33.778198000 Z
-- - :permit
-  - Artistic-2.0
-  - :who: Alessandro Canessa
-    :why: Acceptable license
-    :versions: []
-    :when: 2021-04-22 09:22:21.621375000 Z
-- - :permit
-  - LGPL
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2022-02-17 08:43:13.523566000 Z
-- - :permit
-  - GPL-3.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2022-04-29 12:42:53.114385000 Z
-- - :permit
-  - BlueOak-1.0.0
-  - :who: Benjamin Sproule
-    :why: Acceptable license
-    :versions: []
-    :when: 2023-04-25 16:13:18.549157000 Z
+- - :inherit_from
+  - approved_licenses.yml
