Updated decision files and README

--- a/dependency_decisions.yml
+++ b/dependency_decisions.yml
@@ -1,3 +1,9 @@
 ---
 - - :inherit_from
+  - https://gitlab.com/bmi-digital/license-finder/-/raw/main/approved_dependencies.yml.yml
+- - :inherit_from
   - https://gitlab.com/bmi-digital/license-finder/-/raw/main/approved_licenses.yml
+- - :inherit_from
+  - https://gitlab.com/bmi-digital/license-finder/-/raw/main/bmi_projects.yml
+- - :inherit_from
+  - https://gitlab.com/bmi-digital/license-finder/-/raw/main/fixed_dependency_licenses.yml
