--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -143,3 +143,9 @@
     :why: Acceptable license
     :versions: []
     :when: 2023-04-25 16:13:18.549157000 Z
+- - :permit
+  - Eclipse Public License 1.0
+  - :who: Benjamin Sproule
+    :why: Acceptable license
+    :versions: []
+    :when: 2023-06-08 18:27:59.646174000 Z
