--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -149,3 +149,9 @@
     :why: Acceptable license
     :versions: []
     :when: 2023-06-08 18:27:59.646174000 Z
+- - :permit
+  - Eclipse Public License v2.0
+  - :who: Benjamin Sproule
+    :why: Acceptable license
+    :versions: []
+    :when: 2023-06-08 18:40:30.387332000 Z
