--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -155,3 +155,9 @@
     :why: Acceptable license
     :versions: []
     :when: 2023-06-08 18:40:30.387332000 Z
+- - :permit
+  - BSD License 3
+  - :who: Benjamin Sproule
+    :why: Acceptable license
+    :versions: []
+    :when: 2023-06-08 18:41:47.804626000 Z
