--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -162,3 +162,15 @@
     :why: Compatible license
     :versions: []
     :when: 2023-10-06 20:51:07.534272000 Z
+- - :permit
+  - CDDL-1.0
+  - :who: Benjamin Sproule
+    :why: Compatible license
+    :versions: []
+    :when: 2023-10-20 18:10:29.574272000 Z
+- - :permit
+  - CDDL-1.1
+  - :who: Benjamin Sproule
+    :why: Compatible license
+    :versions: []
+    :when: 2023-10-20 18:11:04.334272000 Z
