--- a/approved_dependencies.yml
+++ b/approved_dependencies.yml
@@ -43,3 +43,27 @@
     :why: Proprietary Atlassian library for Forge apps
     :versions: []
     :when: 2023-10-04 17:25:43.615810000 Z
+- - :approve
+  - "javax.servlet.jsp.jstl"
+  - :who: Benjamin Sproule
+    :why: Licensed with CCDL-1.0 and GPL-2.0 with a classpath exception
+    :versions: []
+    :when: 2023-10-20 18:14:32.615810000 Z
+- - :approve
+  - "jstl-api"
+  - :who: Benjamin Sproule
+    :why: Licensed with CCDL-1.0 and GPL-2.0 with a classpath exception
+    :versions: []
+    :when: 2023-10-20 18:14:52.615810000 Z
+- - :approve
+  - "jsp-api"
+  - :who: Benjamin Sproule
+    :why: Licensed with CCDL-1.0 and GPL-2.0 with a classpath exception
+    :versions: []
+    :when: 2023-10-20 18:16:12.615810000 Z
+- - :approve
+  - "servlet-api"
+  - :who: Benjamin Sproule
+    :why: Licensed with CCDL-1.0 and GPL-2.0 with a classpath exception
+    :versions: []
+    :when: 2023-10-20 18:16:42.615810000 Z
