Moved decisions to correct files

--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -174,3 +174,9 @@
     :why: Compatible license
     :versions: []
     :when: 2023-10-20 18:11:04.334272000 Z
+- - :permit
+  - BSD-2-Clause
+  - :who: Benjamin Sproule
+    :why: Compatible license
+    :versions: []
+    :when: 2023-12-20 13:46:57.968584000 Z
