ci: Add new repo to bmi projects

--- a/bmi_projects.yml
+++ b/bmi_projects.yml
@@ -71,3 +71,9 @@
     :why: Our own project
     :versions: []
     :when: 2024-01-12 10:53:31.504897000 Z
+- - :approve
+  - "@bmi-digital/payload-rich-text"
+  - :who: Rahul Mhatre
+    :why: Our own project
+    :versions: []
+    :when: 2025-03-24 10:53:31.504897000 Z
