feat: added new licences

--- a/approved_licenses.yml
+++ b/approved_licenses.yml
@@ -198,3 +198,9 @@
     :why: Compatible license
     :versions: []
     :when: 2024-11-22 11:15:51.416608000 Z
+- - :permit
+  - GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1
+  - :who: Rahul Mhatre
+    :why: Compatible license
+    :versions: []
+    :when: 2025-07-17 16:16:42.615810000 Z
