--- a/approved_dependencies.yml
+++ b/approved_dependencies.yml
@@ -67,3 +67,9 @@
     :why: Licensed with CCDL-1.0 and GPL-2.0 with a classpath exception
     :versions: []
     :when: 2023-10-20 18:16:42.615810000 Z
+- - :approve
+  - "spotbugs-annotations"
+  - :who: Rahul Mhatre
+    :why: Licensed with GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1
+    :versions: []
+    :when: 2025-07-17 16:16:42.615810000 Z
